@@ -51,8 +51,8 @@ public class IssueRepository {
      * @return возвращает количество книг, которое уже взял читатель
      */
     public int countBooksIssuedToReader(long readerId) {
-        return issues.stream().filter(it -> Objects.equals(it.getId(), readerId) && it.getReturned_at() == null)
-                .collect(Collectors.toList()).size();
+        return issues.stream().filter(it -> Objects.equals(it.getId(), readerId) && it.getReturned_at() == null).toList().size();
+//                .collect(Collectors.toList()).size();
     }
 
     /**
